--- a/hw3/problem1.ipynb
+++ b/hw3/problem1.ipynb
@@ -2286,7 +2286,7 @@
    "hash": "21a601794a7cd45889532e042ab1191391bed29783ca1b1cad2908006cea832d"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit ('cps584': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
